Update technical expertise and OS journey details

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <div class="container">
         <section>
             <h2 style="color: var(--primary-cyan);">Technical Expertise</h2>
-            <div class="skill-tag">9+ Linux Distros Tested</div>
+            <div class="skill-tag">7+ Linux Distros Tested</div>
             <div class="skill-tag">Bash Scripting</div>
             <div class="skill-tag">Python Development</div>
             <div class="skill-tag">C++ Programming</div>
@@ -135,8 +135,8 @@
 
         <section class="grid">
             <div class="card">
-                <h3>The 13 OS Journey</h3>
-                <p>From Ubuntu to Raspbian, I have experimented with 13 different operating systems, mastering the terminal and system kernels.</p>
+                <h3>The 14 OS Journey</h3>
+                <p>From Ubuntu to windows Xp, I have experimented with 13 different operating systems/</p>
             </div>
             <div class="card">
                 <h3>Cambridge request</h3>
