Add Cambridge University button and update contact info

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
         .pi-btn { background-color: #c51a4a; color: white; }
         .micro-btn { background-color: #ffffff; color: #ed1c24; }
+        .cam-btn { background-color: #c51a4a; color: cyan; }
 
         .dream-btn:hover {
             transform: scale(1.1);
@@ -162,12 +163,13 @@
             <div class="btn-container">
                 <a href="https://www.raspberrypi.com/" target="_blank" class="dream-btn pi-btn">Visit Raspberry Pi Foundation</a>
                 <a href="https://www.microcenter.com/" target="_blank" class="dream-btn micro-btn">Explore Micro Center</a>
+                <a href="https://www.cam.ac.uk/" target="_blank" class="dream-btn cam-btn">Visit Cambridge university</a>
             </div>
         </section>
 
         <section style="margin-top: 80px; text-align: center;">
             <h2 style="color: var(--primary-cyan);">Contact Me</h2>
-            <p>Find me on <a href="https://github.com/selfitis" target="_blank" style="color: var(--primary-cyan);">GitHub</a> or reach me via email: <a href="mailto:example@email.com" style="color: var(--primary-cyan);">example@email.com</a></p>
+            <p>Find me on <a href="https://github.com/selfitis" target="_blank" style="color: var(--primary-cyan);">My GitHub page</a> or reach me via email: <a href="mailto:vnmzsa@gmail.com" style="color: var(--primary-cyan);">vnmzsa@gmail.com</a></p>
         </section>
     </div>
 
