--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                 <li><strong>Name:</strong> Zekeriyya Said Altay (Selfitis), 13-year-old tech enthusiast</li>
                 <li><strong>Operating Systems:</strong> 7 Linux distros, 5 Windows versions, Android, iOS</li>
                 <li><strong>Hardware:</strong> Raspberry Pi 4B+, Raspberry Pi Zero, Arduino</li>
-                <li><strong>Programming:</strong> Python, C++, Git</li>
-                <li><strong>Design & Modification:</strong> Keyboard design, hardware assembly</li>
-                <li><strong>Projects:</strong> BILSEM Project Presentation, OS performance analysis</li>
+                <li><strong>Programming:</strong> Python, C++, Bash Script</li>
+                <li><strong>Design & Modification:</strong>Hardware assembly</li>
+                <li><strong>Projects:</strong> BILSEM Project Presentation, OS performance boosting</li>
                 <li><strong>Learning Discipline:</strong> Self-taught via documentation, forums, trial-and-error</li>
                 <li><strong>Personal Skills:</strong> Algorithmic thinking, adaptation to new tools</li>
             </ul>
