--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         }
 
         .pi-btn { background-color: #c51a4a; color: white; }
-        .micro-btn { background-color: #ffffff; color: #ed1c24; }
-        .cam-btn { background-color: #c51a4a; color: cyan; }
+        .micro-btn { background-color: #000000; color: white; }
+        .cam-btn { background-color: #8a23d3; color: white; }
 
         .dream-btn:hover {
             transform: scale(1.1);
@@ -119,7 +119,7 @@
 
     <header>
         <h1>Future Systems Architect</h1>
-        <p class="subtitle">Linux Explorer | C++ & Python Dev | Ankara, TR</p>
+        <p class="subtitle">Linux Explorer | C++ ,Bashscript & Python Dev | Ankara, TR</p>
     </header>
 
     <div class="container">
@@ -141,6 +141,7 @@
                 <h3>Cambridge Request</h3>
                 <p>I want to shape the future of software by joining one of the world's most prestigious engineering schools.</p>
             </div>
+            <section style="margin-top: 80px; text-align: center;">
         </section>
 
         <section class="card">
