--- a/index.html
+++ b/index.html
@@ -141,10 +141,9 @@
                 <h3>Cambridge Request</h3>
                 <p>I want to shape the future of software by joining one of the world's most prestigious engineering schools.</p>
             </div>
-            <section style="margin-top: 80px; text-align: center;">
         </section>
 
-        <section class="card">
+        <section class="card" style="margin-top: 100px;">
             <h3>General CV</h3>
             <ul>
                 <li><strong>Name:</strong> Zekeriyya Said Altay (Selfitis), 13-year-old tech enthusiast</li>
