Change button styles to white background and black text

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             font-size: 1.1rem;
         }
 
-        .pi-btn { background-color: #c51a4a; color: white; }
+        .pi-btn { background-color: #ffffff; color: black; }
         .micro-btn { background-color: #000000; color: white; }
-        .cam-btn { background-color: #8a23d3; color: white; }
+        .cam-btn { background-color: #ffffff; color: black; }
 
         .dream-btn:hover {
             transform: scale(1.1);
