--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
 
         .pi-btn { background-color: #ffffff; color: black; }
         .micro-btn { background-color: #000000; color: white; }
-        .cam-btn { background-color: #ffffff; color: black; }
 
         .dream-btn:hover {
             transform: scale(1.1);
@@ -118,7 +117,7 @@
 <body>
 
     <header>
-        <h1>Future Systems Architect</h1>
+        <h1>Software engineer of the future:Selfitis</h1>
         <p class="subtitle">Linux Explorer | C++ ,Bashscript & Python Dev | Ankara, TR</p>
     </header>
 
@@ -163,18 +162,18 @@
             <div class="btn-container">
                 <a href="https://www.raspberrypi.com/" target="_blank" class="dream-btn pi-btn">Visit Raspberry Pi Foundation</a>
                 <a href="https://www.microcenter.com/" target="_blank" class="dream-btn micro-btn">Explore Micro Center</a>
-                <a href="https://www.cam.ac.uk/" target="_blank" class="dream-btn cam-btn">Visit Cambridge university</a>
             </div>
         </section>
 
         <section style="margin-top: 80px; text-align: center;">
             <h2 style="color: var(--primary-cyan);">Contact Me</h2>
             <p>Find me on <a href="https://github.com/selfitis" target="_blank" style="color: var(--primary-cyan);">My GitHub page</a> or reach me via email: <a href="mailto:vnmzsa@gmail.com" style="color: var(--primary-cyan);">vnmzsa@gmail.com</a></p>
+            <p>Other Connections:<a href="https://www.instagram.com/selfitis29/" target="_blank" style="color: var(--primary-cyan);">My Instagram</a> and <a href="https://www.youtube.com/@selfitiss" style="color: var(--primary-cyan);">Selfitis Youtube Channel</a></p>
         </section>
     </div>
 
     <footer>
-        <p>Designed by a 13-year-old developer with a vision.</p>
+        <p>Designed by a visionary developer born in 2013..</p>
     </footer>
 
 </body>
