--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
 
     <header>
         <h1>Software engineer of the future:Selfitis</h1>
-        <p class="subtitle">Linux Explorer | C++ ,Bashscript & Python Dev | Ankara, TR</p>
+        <p class="subtitle">Linux Explorer | C++ ,Bashscript & Python Dev & Hardware Projects | Ankara, TR</p>
     </header>
 
     <div class="container">
         <section>
             <h2 style="color: var(--primary-cyan);">Technical Expertise</h2>
-            <div class="skill-tag">7+ Linux Distros Tested</div>
+            <div class="skill-tag">More than 7 Linux distributions were tested.</div>
             <div class="skill-tag">Bash Scripting</div>
             <div class="skill-tag">Python Development</div>
             <div class="skill-tag">C++ Programming</div>
@@ -133,12 +133,12 @@
 
         <section class="grid">
             <div class="card">
-                <h3>The 14 OS Journey</h3>
-                <p>From Ubuntu to Windows XP, I have experimented with 13 different operating systems.</p>
+                <h3>The 16 OS Journey</h3>
+                <p>From Ubuntu to Windows XP, I have experimented with 16 different operating systems.</p>
             </div>
             <div class="card">
-                <h3>Cambridge Request</h3>
-                <p>I want to shape the future of software by joining one of the world's most prestigious engineering schools.</p>
+                <h3>University Request</h3>
+                <p>I want to shape the future of software by joining one of the world's most prestigious engineering schools at United Kingdom.</p>
             </div>
         </section>
 
@@ -146,11 +146,11 @@
             <h3>General CV</h3>
             <ul>
                 <li><strong>Name:</strong> Zekeriyya Said Altay (Selfitis), 13-year-old tech enthusiast</li>
-                <li><strong>Operating Systems:</strong> 7 Linux distros, 5 Windows versions, Android, iOS</li>
+                <li><strong>Operating Systems:</strong> 7 Linux distros, 5 Windows versions, Android, iOS,Chromebook</li>
                 <li><strong>Hardware:</strong> Raspberry Pi 4B+, Raspberry Pi Zero, Arduino</li>
                 <li><strong>Programming:</strong> Python, C++, Bash Script</li>
                 <li><strong>Design & Modification:</strong>Hardware assembly</li>
-                <li><strong>Projects:</strong> BILSEM Project Presentation, OS performance boosting</li>
+                <li><strong>Projects:</strong> BILSEM Project Presentation, OS performance boosting,Online Tamagotchi Pet with Pi Zero</li>
                 <li><strong>Learning Discipline:</strong> Self-taught via documentation, forums, trial-and-error</li>
                 <li><strong>Personal Skills:</strong> Algorithmic thinking, adaptation to new tools</li>
             </ul>
