--- a/index.html
+++ b/index.html
@@ -172,9 +172,14 @@
         </section>
     </div>
 
-    <footer>
-        <p>Designed by a visionary developer born in 2013..</p>
-    </footer>
-
+<footer>
+    <p>Designed by a visionary developer born in 2013..</p>
+    <p>
+        Ziyaretçi sayısı: 
+        <a href="https://hits.seeyoufarm.com">
+            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fselfitis.github.io&count_bg=%2300ADB5&title_bg=%23222831&icon=&icon_color=%23EEEEEE&title=Ziyaret&edge_flat=true" alt="Ziyaretçi Sayısı" style="vertical-align: middle;" />
+        </a>
+    </p>
+</footer>
 </body>
 </html>
