--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="container">
         <section>
             <h2 style="color: var(--primary-cyan);">Technical Expertise</h2>
-            <div class="skill-tag">More than 7 Linux distributions were tested.</div>
+            <div class="skill-tag">More than 27 OS were tested.</div>
             <div class="skill-tag">Bash Scripting</div>
             <div class="skill-tag">Python Development</div>
             <div class="skill-tag">C++ Programming</div>
@@ -133,8 +133,8 @@
 
         <section class="grid">
             <div class="card">
-                <h3>The 16 OS Journey</h3>
-                <p>From Ubuntu to Windows XP, I have experimented with 16 different operating systems.</p>
+                <h3>The OS Journey</h3>
+                <p>From Ubuntu to Windows XP, I have experimented more than 27 different operating systems.</p>
             </div>
             <div class="card">
                 <h3>University Request</h3>
